data/derived/comb/progs/unify/prog2658.ml.out
Characters 90-121:
  | h :: t -> bigAdd( (mulByDigit (h a')) a') in
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
